<resources>
    <string name="app_name">Kobo Glo Utility</string>
    <string name="disable_blinking_led_at_startup_one_beside_the_light_button">Disable Blinking LED at startup (one beside the power-slider)</string>
    <string name="screen_refresh_input_listener_service_options">Screen-Refresh Input Listener-Service Options</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="manual_refresh_now">Test Screen Refreshing</string>
    <string name="kobo_glo_light_button_utility">Kobo Glo Utility v1.0</string>
    <string name="sagar_gupta">Sagar Gupta</string>
    <string name="in_linkedin_com_in_sagargupta3491">in.linkedin.com/in/sagargupta3491</string>
    <string name="run_service_at_system_startup">Run Service at System Startup</string>
    <string name="extras">Extras</string>
    <string name="set_light_button_action_activate_changes_after_reboot">Set Light Button Action (Activates after Reboot !)</string>
    <string name="screen_refresh">Screen-Refresh</string>
    <string name="nothing">Nothing</string>
    <string name="back_android">Back (Android)</string>
    <string name="title_activity_settings">Settings</string>
    <string name="refresh_screen_on_volume_change">Refresh Screen on Volume Change</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
