<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sagargupta.koboglolightbuttonutility.MainActivity"
    android:clickable="false"
    android:visibility="visible"
    style="@android:style/Theme.Black.NoTitleBar">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_service"
        android:id="@+id/startButton"
        android:clickable="true"
        android:enabled="true"
        android:onClick="startListenerService"
        android:layout_below="@+id/textView4"
        android:layout_toLeftOf="@+id/stopButton"
        android:layout_marginRight="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_service"
        android:id="@+id/stopButton"
        android:clickable="true"
        android:enabled="true"
        android:onClick="stopListenerService"
        android:layout_below="@+id/textView4"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manual_refresh_now"
        android:id="@+id/manualRefreshButton"
        android:enabled="true"
        android:clickable="true"
        android:onClick="manualRefresh"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kobo_glo_light_button_utility"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:editable="false"
        android:enabled="true"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sagar_gupta"
        android:id="@+id/textView2"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="140dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/in_linkedin_com_in_sagargupta3491"
        android:id="@+id/textView3"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textIsSelectable="true"
        android:layout_alignParentBottom="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/run_service_at_system_startup"
        android:id="@+id/autoStartupCheckbox"
        android:textSize="16sp"
        android:checked="false"
        android:persistent="true"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/screen_refresh_input_listener_service_options"
        android:id="@+id/textView4"
        android:textSize="20sp"
        android:enabled="true"
        android:textStyle="bold|italic"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="160dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/extras"
        android:id="@+id/textView5"
        android:textSize="20sp"
        android:enabled="true"
        android:textStyle="bold|italic"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="160dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disable_blinking_led_at_startup_one_beside_the_light_button"
        android:id="@+id/killLEDStartupCheckBox"
        android:textSize="16sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checked="false"
        android:persistent="true"
        android:layout_below="@+id/textView5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_light_button_action_activate_changes_after_reboot"
        android:id="@+id/textView6"
        android:textSize="20sp"
        android:enabled="true"
        android:textStyle="bold|italic"
        android:layout_marginTop="74dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/screen_refresh"
        android:id="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView6"
        android:onClick="setLightButtonScreenRefresh"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_android"
        android:id="@+id/button2"
        android:onClick="setLightButtonBack"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/nothing"
        android:id="@+id/button3"
        android:onClick="setLightButtonNothing"
        android:layout_below="@+id/textView6"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refresh_screen_on_volume_change"
        android:id="@+id/volumeChangeScreenRefresh"
        android:textSize="16sp"
        android:checked="false"
        android:persistent="true"
        android:layout_below="@+id/autoStartupCheckbox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
